[metadata]
name = marker
summary = Base benchmark test tool
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/cxhuawei/marker
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    marker

[entry_points]
console_scripts =
    marker = marker.cli.main:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

